[gd_scene load_steps=5 format=3 uid="uid://dax6iqbttx6kd"]

[ext_resource type="Script" path="res://Scripts/UI/AssetDetailsOverlay.gd" id="1_lculc"]
[ext_resource type="FontFile" uid="uid://cir48cl3fhleo" path="res://Assets/Fonts/montserrat.bold.ttf" id="1_qt1q6"]
[ext_resource type="FontFile" uid="uid://ep3h7ef2uyq" path="res://Assets/Fonts/montserrat.medium.ttf" id="2_s86ax"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_40qbn"]
bg_color = Color(0.203922, 0.258824, 0.345098, 0.95)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="AssetDetailsOverlay" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lculc")

[node name="Dimmer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.45)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_40qbn")

[node name="Margin" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBox" type="VBoxContainer" parent="Panel/Margin"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="TitleLabel" type="Label" parent="Panel/Margin/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_qt1q6")
theme_override_font_sizes/font_size = 70
text = "Asset Name"
horizontal_alignment = 1

[node name="DurationLabel" type="Label" parent="Panel/Margin/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_s86ax")
theme_override_font_sizes/font_size = 40
text = "Duration: 0 years"
horizontal_alignment = 1

[node name="GoodLabel" type="Label" parent="Panel/Margin/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_s86ax")
theme_override_font_sizes/font_size = 35
autowrap_mode = 3
text = "Performs well when: (coming soon)"

[node name="BadLabel" type="Label" parent="Panel/Margin/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_s86ax")
theme_override_font_sizes/font_size = 35
autowrap_mode = 3
text = "Performs badly when: (coming soon)"

[node name="CloseButton" type="Button" parent="Panel/Margin/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Close"
